[package]
name = "ls"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
solana-client = "1.18"
solana-sdk = "1.18"
spl-token = "4.0"
bs58 = "0.5"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
